--- a/course/en/components.json
+++ b/course/en/components.json
@@ -11,9 +11,9 @@
     "_disableAccessibilityState": false,
     "title": "س1",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">التنمر الاجتماعي هو الذي يتضمن:</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c425",
-    "_parentId": "616d25870b543e0168c8c41a",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من الأمراض التي يمكن أن تتولّد عن تعاطي المخدّرات:</span></strong></span></p>",
+    "_id": "616bd711777fe31ed4afe685",
+    "_parentId": "616bc6d21aea7228c481d077",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -24,21 +24,28 @@
     "instruction": "إختر الإجابة أو الإجابات المناسبة",
     "_items": [
       {
-        "text": "استبعاد شخص باستمرار",
+        "text": "111مرض نقص المناعة",
         "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
-        "text": "تخويف شخص أو ضربه",
-        "_shouldBeSelected": false,
+        "text": "111أمراض القلب",
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
-        "text": "تبادل صور لها تاثير على شخص معيّن",
+        "text": "م111رض السرطان",
+        "_shouldBeSelected": true,
+        "_isPartlyCorrect": false,
+        "feedback": "",
+        "_score": 0
+      },
+      {
+        "text": "111أمراض الجهاز العصبي",
         "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
@@ -57,9 +64,9 @@
     "_selectable": 4,
     "_feedback": {
       "title": "",
-      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" > </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
+      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" >  </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
       "_incorrect": {
-        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \" ></p>\n",
+        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \">  </p>\n",
         "notFinal": ""
       },
       "_partlyCorrect": {
@@ -105,8 +112,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c426",
-    "_parentId": "616d25870b543e0168c8c41a",
+    "_id": "616bd716777fe31ed4afe686",
+    "_parentId": "616bc6d21aea7228c481d077",
     "_type": "component",
     "_layout": "left"
   },
@@ -122,9 +129,9 @@
     "_disableAccessibilityState": false,
     "title": "س2",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">التنمر الإلكتروني هو الذي يشمل:</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c427",
-    "_parentId": "616d25870b543e0168c8c41b",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من علامات تعاطي المخدرات لدى المراهقين:</span></strong></span></p>",
+    "_id": "616be726d477531f4c700659",
+    "_parentId": "616be726d477531f4c700658",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -135,22 +142,29 @@
     "instruction": "إختر الإجابة أو الإجابات المناسبة",
     "_items": [
       {
-        "text": "نشر صور لشخص بهدف إيذائه",
+        "text": "1111العلاقات المتغيّرة مع أفراد الأسرة أو الأصدقاء",
         "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
-        "text": "إهانة شخص ما بسبب خصائص بدنية",
+        "text": "2222مضغ العلكة أو النعناع لتغطية النفس",
+        "_shouldBeSelected": true,
+        "_isPartlyCorrect": false,
+        "feedback": "",
+        "_score": 0
+      },
+      {
+        "text": "\"2222حالة من الأرق أو الطاقة العالية، تليها فترات طويلة من النوم \"التعويضي\"",
+        "_shouldBeSelected": true,
+        "_isPartlyCorrect": false,
+        "feedback": "",
+        "_score": 0
+      },
+      {
+        "text": "التواصل بالعين بشكل ملفت",
         "_shouldBeSelected": false,
-        "_isPartlyCorrect": false,
-        "feedback": "",
-        "_score": 0
-      },
-      {
-        "text": "نشر معلومات لشخص معيّن تؤثر عليه بشكل سلبي",
-        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -168,9 +182,9 @@
     "_selectable": 4,
     "_feedback": {
       "title": "",
-      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" > </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
+      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" >  </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n\n",
       "_incorrect": {
-        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \" ></p>\n",
+        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/false.png \"> </p>\n",
         "notFinal": ""
       },
       "_partlyCorrect": {
@@ -216,8 +230,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c428",
-    "_parentId": "616d25870b543e0168c8c41b",
+    "_id": "616be726d477531f4c70065a",
+    "_parentId": "616be726d477531f4c700658",
     "_type": "component",
     "_layout": "left"
   },
@@ -233,9 +247,9 @@
     "_disableAccessibilityState": false,
     "title": "س3",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">للحفاظ على الصحة ممكن اعتماد الخيارات الصحية التالية:</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c429",
-    "_parentId": "616d25870b543e0168c8c41c",
+    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">333المادة المنبّهة هي مادة :</span></span></strong></p>",
+    "_id": "616be846d477531f4c70065d",
+    "_parentId": "616be846d477531f4c70065c",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -246,21 +260,21 @@
     "instruction": "إختر الإجابة أو الإجابات المناسبة",
     "_items": [
       {
-        "text": "تناول وجبة صحية متوازنة",
+        "text": "تؤثر في الدماغ والجهاز العصبي",
         "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
-        "text": "تجربة الدخان من وقت لآخر",
+        "text": "تبطئ نبضات القلب وعملية التنفس",
         "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
-        "text": "استبدال المشروبات الغازية بالعصير الطبيعي",
+        "text": "تشّد العضلات وتنبّه الجهاز العصبي",
         "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
@@ -279,9 +293,9 @@
     "_selectable": 3,
     "_feedback": {
       "title": "",
-      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" > </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
+      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" >  </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
       "_incorrect": {
-        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \" ></p>\n",
+        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/false.png \" >  </p>\n",
         "notFinal": ""
       },
       "_partlyCorrect": {
@@ -327,8 +341,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c42a",
-    "_parentId": "616d25870b543e0168c8c41c",
+    "_id": "616be846d477531f4c70065e",
+    "_parentId": "616be846d477531f4c70065c",
     "_type": "component",
     "_layout": "left"
   },
@@ -344,9 +358,9 @@
     "_disableAccessibilityState": false,
     "title": "س4",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">إن التنمر هو ظاهرة عدوانية تنطوي على ممارسة العنف</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c42b",
-    "_parentId": "616d25870b543e0168c8c41d",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">الإدمان هو سيطرة المخدّر على الناحية الصحيّة والناحية النفسيّة&nbsp; فقط عند المدمن</span></strong></span></p>",
+    "_id": "616c0de7d477531f4c700665",
+    "_parentId": "616c0de7d477531f4c700664",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -358,14 +372,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -431,8 +445,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c42c",
-    "_parentId": "616d25870b543e0168c8c41d",
+    "_id": "616c0de7d477531f4c700666",
+    "_parentId": "616c0de7d477531f4c700664",
     "_type": "component",
     "_layout": "left"
   },
@@ -448,9 +462,9 @@
     "_disableAccessibilityState": false,
     "title": "س5",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">إن الموقف المؤذي ممكن أن يقضي على الشخص نفسه وويغيّر من طبيعته</span></span></strong></p>",
-    "_id": "616d25870b543e0168c8c42d",
-    "_parentId": "616d25870b543e0168c8c41e",
+    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">السلوكيات والمهارات الشّخصيّة والاجتماعيّة، تسهم بفهم النفس والغير وتكوين علاقات إيجابية مع الآخرين والقدرة على التّفكير الابداعي</span></span></strong></p>",
+    "_id": "616c1fcdd477531f4c70067d",
+    "_parentId": "616c1fcdd477531f4c70067c",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -462,14 +476,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -535,8 +549,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c42e",
-    "_parentId": "616d25870b543e0168c8c41e",
+    "_id": "616c1fcdd477531f4c70067e",
+    "_parentId": "616c1fcdd477531f4c70067c",
     "_type": "component",
     "_layout": "left"
   },
@@ -552,9 +566,9 @@
     "_disableAccessibilityState": false,
     "title": "س6",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">لا يمكننا القضاء على تأثير موقف عدواني أو عنف على شخص</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c42f",
-    "_parentId": "616d25870b543e0168c8c41f",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من الممكن تجربة مواد غير قانونية، لمعرفة كيفيّة تفاعل الجسم معها</span></strong></span></p>",
+    "_id": "616c2059d477531f4c700681",
+    "_parentId": "616c2059d477531f4c700680",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -566,14 +580,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -639,8 +653,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c430",
-    "_parentId": "616d25870b543e0168c8c41f",
+    "_id": "616c2059d477531f4c700682",
+    "_parentId": "616c2059d477531f4c700680",
     "_type": "component",
     "_layout": "left"
   },
@@ -656,9 +670,9 @@
     "_disableAccessibilityState": false,
     "title": "س7",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">يؤثر تناول  الكحول في نمو الدماغ ووظائفه المختلفة.</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c431",
-    "_parentId": "616d25870b543e0168c8c420",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">&nbsp;بالإمكان أن يتحدى الشخص نفسه من خلال الرياضة أو التطوع في عمل اجتماعي خيري أو القيام بعمل إبداعي جديد.</span></strong></span></p>",
+    "_id": "616c209ed477531f4c700685",
+    "_parentId": "616c209ed477531f4c700684",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -743,8 +757,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c432",
-    "_parentId": "616d25870b543e0168c8c420",
+    "_id": "616c209ed477531f4c700686",
+    "_parentId": "616c209ed477531f4c700684",
     "_type": "component",
     "_layout": "left"
   },
@@ -760,9 +774,9 @@
     "_disableAccessibilityState": false,
     "title": "س8",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">الشعور بالقلق هو حالة صحية ويجب التعبير عنها والاستفادة منها</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c433",
-    "_parentId": "616d25870b543e0168c8c421",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من السلوكيات عالية المخاطرهي قلة تقدير الشخص لذاته والشعور بالرفض الاجتماعي مما يجعله يلجأ الى مواد يعتقد أنها تؤمن له الشعور بالأمان</span></strong></span></p>",
+    "_id": "616c21d3d477531f4c700689",
+    "_parentId": "616c21d3d477531f4c700688",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -774,14 +788,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -847,8 +861,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c434",
-    "_parentId": "616d25870b543e0168c8c421",
+    "_id": "616c21d3d477531f4c70068a",
+    "_parentId": "616c21d3d477531f4c700688",
     "_type": "component",
     "_layout": "left"
   },
@@ -864,9 +878,9 @@
     "_disableAccessibilityState": false,
     "title": "س9",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">من الضروري أن تقوم المدرسة في تعزيز الممارسات والسلوكيات الصحية الصحيحة</span></span></strong></p>",
-    "_id": "616d25870b543e0168c8c435",
-    "_parentId": "616d25870b543e0168c8c422",
+    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">إذا كان حول المتعلم أشخاص يستخدمون المواد المخدّرة، بإمكانه التدخل لمنعهم</span></span></strong></p>",
+    "_id": "616c223dd477531f4c70068d",
+    "_parentId": "616c223dd477531f4c70068c",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -878,14 +892,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -951,8 +965,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c436",
-    "_parentId": "616d25870b543e0168c8c422",
+    "_id": "616c223dd477531f4c70068e",
+    "_parentId": "616c223dd477531f4c70068c",
     "_type": "component",
     "_layout": "left"
   },
@@ -968,9 +982,9 @@
     "_disableAccessibilityState": false,
     "title": "س10",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">يلعب المجتمع دورًا فاعلًا في التوعية عبر حملات التوعية من قبل الوزارات المعنية كوزارة الإعلام </span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c437",
-    "_parentId": "616d25870b543e0168c8c423",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من دوافع التعاطي مشاكل عائلية، اقتصادية، تمرّد، فضول، ضغط الأقران... </span></strong></span></p>",
+    "_id": "616c22b9d477531f4c700691",
+    "_parentId": "616c22b9d477531f4c700690",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -1055,8 +1069,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c438",
-    "_parentId": "616d25870b543e0168c8c423",
+    "_id": "616c22b9d477531f4c700692",
+    "_parentId": "616c22b9d477531f4c700690",
     "_type": "component",
     "_layout": "left"
   },
@@ -1073,8 +1087,8 @@
     "title": "Title",
     "displayTitle": "",
     "body": "",
-    "_id": "616d25870b543e0168c8c439",
-    "_parentId": "616d25870b543e0168c8c424",
+    "_id": "616c2419d477531f4c700694",
+    "_parentId": "616c2410d477531f4c700693",
     "_type": "component",
     "_layout": "full",
     "_onScreen": {
