--- a/course/en/components.json
+++ b/course/en/components.json
@@ -12,8 +12,8 @@
     "title": "س1",
     "displayTitle": "",
     "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">التنمر الاجتماعي هو الذي يتضمن:</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c425",
-    "_parentId": "616d25870b543e0168c8c41a",
+    "_id": "616bd711777fe31ed4afe685",
+    "_parentId": "616bc6d21aea7228c481d077",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -31,15 +31,15 @@
         "_score": 0
       },
       {
-        "text": "تخويف شخص أو ضربه",
-        "_shouldBeSelected": false,
+        "text": "تبادل صور لها تاثير على شخص معيّن",
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
-      {
-        "text": "تبادل صور لها تاثير على شخص معيّن",
-        "_shouldBeSelected": true,
+	{
+        "text": "تخويف شخص أو ضربه",
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -54,12 +54,12 @@
     "_recordInteraction": true,
     "_hasItemScoring": false,
     "_questionWeight": 1,
-    "_selectable": 4,
+    "_selectable": 3,
     "_feedback": {
       "title": "",
-      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" > </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
+      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" >  </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
       "_incorrect": {
-        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \" ></p>\n",
+        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \">  </p>\n",
         "notFinal": ""
       },
       "_partlyCorrect": {
@@ -105,8 +105,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c426",
-    "_parentId": "616d25870b543e0168c8c41a",
+    "_id": "616bd716777fe31ed4afe686",
+    "_parentId": "616bc6d21aea7228c481d077",
     "_type": "component",
     "_layout": "left"
   },
@@ -123,8 +123,8 @@
     "title": "س2",
     "displayTitle": "",
     "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">التنمر الإلكتروني هو الذي يشمل:</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c427",
-    "_parentId": "616d25870b543e0168c8c41b",
+    "_id": "616be726d477531f4c700659",
+    "_parentId": "616be726d477531f4c700658",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -142,15 +142,15 @@
         "_score": 0
       },
       {
-        "text": "إهانة شخص ما بسبب خصائص بدنية",
-        "_shouldBeSelected": false,
+        "text": "نشر معلومات لشخص معيّن تؤثر عليه بشكل سلبي",
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
-        "text": "نشر معلومات لشخص معيّن تؤثر عليه بشكل سلبي",
-        "_shouldBeSelected": true,
+        "text": "إهانة شخص ما بسبب خصائص بدنية",
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -168,9 +168,9 @@
     "_selectable": 4,
     "_feedback": {
       "title": "",
-      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" > </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
+      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" >  </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n\n",
       "_incorrect": {
-        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \" ></p>\n",
+        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/false.png \"> </p>\n",
         "notFinal": ""
       },
       "_partlyCorrect": {
@@ -216,8 +216,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c428",
-    "_parentId": "616d25870b543e0168c8c41b",
+    "_id": "616be726d477531f4c70065a",
+    "_parentId": "616be726d477531f4c700658",
     "_type": "component",
     "_layout": "left"
   },
@@ -233,9 +233,9 @@
     "_disableAccessibilityState": false,
     "title": "س3",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">للحفاظ على الصحة ممكن اعتماد الخيارات الصحية التالية:</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c429",
-    "_parentId": "616d25870b543e0168c8c41c",
+    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">للحفاظ على الصحة ممكن اعتماد الخيارات الصحية التالية:</span></span></strong></p>",
+    "_id": "616be846d477531f4c70065d",
+    "_parentId": "616be846d477531f4c70065c",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -279,9 +279,9 @@
     "_selectable": 3,
     "_feedback": {
       "title": "",
-      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" > </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
+      "correct": "<p style=\"font-size:32px\"><strong>إجابة صحيحة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/true.png \" >  </p>\n<audio  autoplay>\n\t <source src=\"assets/ok.mp3\" type=\"audio/mpeg\">\n</audio>\n",
       "_incorrect": {
-        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img src=\"assets/false.png \" ></p>\n",
+        "final": "<p style=\"font-size:32px\"><strong>إجابة خاطئة</strong></p>\n<p style=\" width:200px\"> <img  src=\"assets/false.png \" >  </p>\n",
         "notFinal": ""
       },
       "_partlyCorrect": {
@@ -327,8 +327,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c42a",
-    "_parentId": "616d25870b543e0168c8c41c",
+    "_id": "616be846d477531f4c70065e",
+    "_parentId": "616be846d477531f4c70065c",
     "_type": "component",
     "_layout": "left"
   },
@@ -344,9 +344,9 @@
     "_disableAccessibilityState": false,
     "title": "س4",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">إن التنمر هو ظاهرة عدوانية تنطوي على ممارسة العنف</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c42b",
-    "_parentId": "616d25870b543e0168c8c41d",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">الإدمان هو سيطرة المخدّر على الناحية الصحيّة والناحية النفسيّة&nbsp; فقط عند المدمن</span></strong></span></p>",
+    "_id": "616c0de7d477531f4c700665",
+    "_parentId": "616c0de7d477531f4c700664",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -358,14 +358,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -431,8 +431,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c42c",
-    "_parentId": "616d25870b543e0168c8c41d",
+    "_id": "616c0de7d477531f4c700666",
+    "_parentId": "616c0de7d477531f4c700664",
     "_type": "component",
     "_layout": "left"
   },
@@ -448,9 +448,9 @@
     "_disableAccessibilityState": false,
     "title": "س5",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">إن الموقف المؤذي ممكن أن يقضي على الشخص نفسه وويغيّر من طبيعته</span></span></strong></p>",
-    "_id": "616d25870b543e0168c8c42d",
-    "_parentId": "616d25870b543e0168c8c41e",
+    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">السلوكيات والمهارات الشّخصيّة والاجتماعيّة، تسهم بفهم النفس والغير وتكوين علاقات إيجابية مع الآخرين والقدرة على التّفكير الابداعي</span></span></strong></p>",
+    "_id": "616c1fcdd477531f4c70067d",
+    "_parentId": "616c1fcdd477531f4c70067c",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -462,14 +462,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -535,8 +535,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c42e",
-    "_parentId": "616d25870b543e0168c8c41e",
+    "_id": "616c1fcdd477531f4c70067e",
+    "_parentId": "616c1fcdd477531f4c70067c",
     "_type": "component",
     "_layout": "left"
   },
@@ -552,9 +552,9 @@
     "_disableAccessibilityState": false,
     "title": "س6",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">لا يمكننا القضاء على تأثير موقف عدواني أو عنف على شخص</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c42f",
-    "_parentId": "616d25870b543e0168c8c41f",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من الممكن تجربة مواد غير قانونية، لمعرفة كيفيّة تفاعل الجسم معها</span></strong></span></p>",
+    "_id": "616c2059d477531f4c700681",
+    "_parentId": "616c2059d477531f4c700680",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -566,14 +566,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -639,8 +639,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c430",
-    "_parentId": "616d25870b543e0168c8c41f",
+    "_id": "616c2059d477531f4c700682",
+    "_parentId": "616c2059d477531f4c700680",
     "_type": "component",
     "_layout": "left"
   },
@@ -656,9 +656,9 @@
     "_disableAccessibilityState": false,
     "title": "س7",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">يؤثر تناول  الكحول في نمو الدماغ ووظائفه المختلفة.</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c431",
-    "_parentId": "616d25870b543e0168c8c420",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">&nbsp;بالإمكان أن يتحدى الشخص نفسه من خلال الرياضة أو التطوع في عمل اجتماعي خيري أو القيام بعمل إبداعي جديد.</span></strong></span></p>",
+    "_id": "616c209ed477531f4c700685",
+    "_parentId": "616c209ed477531f4c700684",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -743,8 +743,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c432",
-    "_parentId": "616d25870b543e0168c8c420",
+    "_id": "616c209ed477531f4c700686",
+    "_parentId": "616c209ed477531f4c700684",
     "_type": "component",
     "_layout": "left"
   },
@@ -760,9 +760,9 @@
     "_disableAccessibilityState": false,
     "title": "س8",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">الشعور بالقلق هو حالة صحية ويجب التعبير عنها والاستفادة منها</span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c433",
-    "_parentId": "616d25870b543e0168c8c421",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من السلوكيات عالية المخاطرهي قلة تقدير الشخص لذاته والشعور بالرفض الاجتماعي مما يجعله يلجأ الى مواد يعتقد أنها تؤمن له الشعور بالأمان</span></strong></span></p>",
+    "_id": "616c21d3d477531f4c700689",
+    "_parentId": "616c21d3d477531f4c700688",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -774,14 +774,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -847,8 +847,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c434",
-    "_parentId": "616d25870b543e0168c8c421",
+    "_id": "616c21d3d477531f4c70068a",
+    "_parentId": "616c21d3d477531f4c700688",
     "_type": "component",
     "_layout": "left"
   },
@@ -864,9 +864,9 @@
     "_disableAccessibilityState": false,
     "title": "س9",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">من الضروري أن تقوم المدرسة في تعزيز الممارسات والسلوكيات الصحية الصحيحة</span></span></strong></p>",
-    "_id": "616d25870b543e0168c8c435",
-    "_parentId": "616d25870b543e0168c8c422",
+    "body": "<p dir=\"rtl\"><strong><span style=\"color:#FFFFFF\"><span style=\"background-color:#FF8C00\">إذا كان حول المتعلم أشخاص يستخدمون المواد المخدّرة، بإمكانه التدخل لمنعهم</span></span></strong></p>",
+    "_id": "616c223dd477531f4c70068d",
+    "_parentId": "616c223dd477531f4c70068c",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -878,14 +878,14 @@
     "_items": [
       {
         "text": "صح ",
-        "_shouldBeSelected": true,
+        "_shouldBeSelected": false,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
       },
       {
         "text": "خطأ",
-        "_shouldBeSelected": false,
+        "_shouldBeSelected": true,
         "_isPartlyCorrect": false,
         "feedback": "",
         "_score": 0
@@ -951,8 +951,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c436",
-    "_parentId": "616d25870b543e0168c8c422",
+    "_id": "616c223dd477531f4c70068e",
+    "_parentId": "616c223dd477531f4c70068c",
     "_type": "component",
     "_layout": "left"
   },
@@ -968,9 +968,9 @@
     "_disableAccessibilityState": false,
     "title": "س10",
     "displayTitle": "",
-    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">يلعب المجتمع دورًا فاعلًا في التوعية عبر حملات التوعية من قبل الوزارات المعنية كوزارة الإعلام </span></strong></span></p>",
-    "_id": "616d25870b543e0168c8c437",
-    "_parentId": "616d25870b543e0168c8c423",
+    "body": "<p dir=\"rtl\"><span style=\"color:#FFFFFF\"><strong><span style=\"background-color:#FF8C00\">من دوافع التعاطي مشاكل عائلية، اقتصادية، تمرّد، فضول، ضغط الأقران... </span></strong></span></p>",
+    "_id": "616c22b9d477531f4c700691",
+    "_parentId": "616c22b9d477531f4c700690",
     "_type": "component",
     "_layout": "right",
     "_onScreen": {
@@ -1055,8 +1055,8 @@
     "title": "New Component Title",
     "displayTitle": "New Component Title",
     "body": "",
-    "_id": "616d25870b543e0168c8c438",
-    "_parentId": "616d25870b543e0168c8c423",
+    "_id": "616c22b9d477531f4c700692",
+    "_parentId": "616c22b9d477531f4c700690",
     "_type": "component",
     "_layout": "left"
   },
@@ -1073,8 +1073,8 @@
     "title": "Title",
     "displayTitle": "",
     "body": "",
-    "_id": "616d25870b543e0168c8c439",
-    "_parentId": "616d25870b543e0168c8c424",
+    "_id": "616c2419d477531f4c700694",
+    "_parentId": "616c2410d477531f4c700693",
     "_type": "component",
     "_layout": "full",
     "_onScreen": {
